NXP-32537: Format